# GFF2MSS

./: GFF2MSS.py  GFF2MSS_v3.py  GFF2MSSv5.py  LICENSE.txt  README.md  example.mss.out.txt  paper.bib  paper.md  pyproject.toml  setup.py
example/: Lj3.0_Chloroplastl.fna  Lj3.0_anno.txt  Lj3.0_cp_gene_models.gff3
example2/: annot.list  mss.out.txt  test.fa  test.gff  tmp.txt
example3/: annotation.list  header.txt  test_gff.gff3  test_sequence.fa
gff2mss/: main.py
gff2mss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utl/: modified_tRNAscan_output.txt  tRNA2gff3.py
